--- a/src/index.scss
+++ b/src/index.scss
@@ -33,11 +33,11 @@
     }
 }
 
-body {
+// body {
 
-    animation: fadeIn; 
-    animation-duration: 0.5s; 
-  }
+//     animation: fadeIn !important; 
+//     animation-duration: 2.5s; 
+//   }
 
 
   .hamburger {
