--- a/src/components/assets/styles/variables.scss
+++ b/src/components/assets/styles/variables.scss
@@ -1,15 +1,16 @@
 :root {
     --react: rgb(82, 162, 236);
-    --js: rgba(204, 190, 60, 1);
+    --js: rgb(235, 214, 27);
     --html: rgba(237, 34, 34, 0.65);
     --css: rgb(1, 78, 150);
     --project: rgb(64, 170, 15);
+    --landing: rgb(0, 231, 19);
   }
 
 
 
   //tags
-  .react {
+  .React {
       color: var(--react);
       &:hover{ 
         color: var(--react);
@@ -17,7 +18,7 @@
       }
   }
 
-  .js {
+  .JavaScript {
       color: var(--js);
       &:hover{ 
         color: var(--js);
@@ -33,7 +34,7 @@
       }
   }
 
-  .css {
+  .CSS {
       color: var(--css);
       &:hover{ 
         color: var(--css);
@@ -41,10 +42,18 @@
       }
   }
 
-  .project {
+  .Project {
       color: var(--project);
       &:hover{ 
         color: var(--project);
+        text-decoration: none;
+      }
+  }
+
+  .Landing {
+    color: var(--landing);
+      &:hover{ 
+        color: var(--landing);
         text-decoration: none;
       }
   }
