сделал небольшой рефакторинг. добавил обертку для артикля, создал страницы, сделал 404 форму с goBack из хука useHistory, добавил анимации появления на страницы, прикрукил typedJs

--- a/src/components/assets/styles/media/mobile.scss
+++ b/src/components/assets/styles/media/mobile.scss
@@ -1,6 +1,10 @@
 // mobile
 @media (max-width: 575.98px) {
-
+  .not-found {
+    &-text {
+        font-size: 28px !important;
+    }
+}
 
     //основная страница
   
@@ -131,8 +135,9 @@
       position: absolute;
       height: 26px;
       width: 100%;
+      left: -10%;
       &-arrow {
-        left: 43%;
+        left: 50% !important;
       }
     }
   
