--- a/src/components/assets/styles/media/mobile.scss
+++ b/src/components/assets/styles/media/mobile.scss
@@ -174,5 +174,14 @@
         }
       }
     }
+
+
+    .social-icon-wrapper {
+      flex-direction: column;
+    }
+  
+
+
+
   } // telephone end
   
