поправил форму, переделал алерты для формы. сделал модальное 'политики конфиденциальности'

--- a/src/components/Alert/notification.scss
+++ b/src/components/Alert/notification.scss
@@ -6,6 +6,7 @@
     margin: 15px 0;
     background: #ec8b3cd3;
     border: 5px;
+    box-shadow: 3px 3px 10px black;
     &-header {
         padding: 0 5px;
         width: 100%;
