компонент hardskills, компонент preogressbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,7 @@
 @import 'components/SocialMedia/socialmedia.scss';
 // @import 'components/Notification/notification.scss';
 @import 'components/Skills/skills.scss';
+@import 'components/Skills/ProgressBar/progressbar.scss';
 // adaptive
 @import 'components/assets/styles/media/mobile.scss';
 
