--- a/src/index.scss
+++ b/src/index.scss
@@ -24,6 +24,10 @@
 // @import 'components/Notification/notification.scss';
 @import 'components/Skills/skills.scss';
 @import 'components/Skills/ProgressBar/progressbar.scss';
+
+// divider
+@import 'components/Divider/divider.scss';
+
 // adaptive
 @import 'components/assets/styles/media/mobile.scss';
 
