--- a/src/index.scss
+++ b/src/index.scss
@@ -30,6 +30,7 @@
 
 // adaptive
 @import 'components/assets/styles/media/mobile.scss';
+@import 'components/assets/styles/media/tablet.scss';
 
 
 * {
