--- a/src/components/Header/Hamburger/hamburger.scss
+++ b/src/components/Header/Hamburger/hamburger.scss
@@ -8,7 +8,7 @@
      top: 0;
      left: 0;
      width: 100%;
-     height: 45px;
+     height: 50px;
      padding: 5px;
      background-color: #211F1F;
      display: flex;
@@ -66,7 +66,7 @@
      width: 100%;
      display: flex;
      flex-direction: column;
-     justify-content: space-between;
+     justify-content: center;
      padding: 25px;
      align-content: center;
      align-items: center;
@@ -77,14 +77,20 @@
      top: 45px;
      z-index: 10000;
      transition: .3s linear;
+     &-item {
+        margin: 0.4rem;
+     }
  }
 
  .menu-one {
      display: flex;
      flex-direction: column;
      justify-content: space-between;
+     min-height: 50%;
+     
      a {
         color: #f0eded;
+        font-size: 17px;
      }
  }
 
