--- a/src/components/Posts/Post/post.scss
+++ b/src/components/Posts/Post/post.scss
@@ -30,10 +30,10 @@
             line-height: 17px;
             text-align: center;
             text-transform: capitalize;
-            color: #736C6C;
+            color: #9e9b9b;
             &:hover{
                 text-decoration: none;
-                color: #9b9696
+                color: rgb(204, 199, 199);
         }
     }
 }
