--- a/src/components/assets/styles/fonts.scss
+++ b/src/components/assets/styles/fonts.scss
@@ -1,16 +1,16 @@
 /* source-code-pro-200 - latin */
-@font-face {
-    font-family: 'Source Code Pro';
-    font-style: normal;
-    font-weight: 200;
-    src: url('../fonts/source-code-pro-v14-latin-200.eot'); /* IE9 Compat Modes */
-    src: local(''),
-         url('../fonts/source-code-pro-v14-latin-200.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/source-code-pro-v14-latin-200.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/source-code-pro-v14-latin-200.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/source-code-pro-v14-latin-200.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/source-code-pro-v14-latin-200.svg#SourceCodePro') format('svg'); /* Legacy iOS */
-  }
+// @font-face {
+//     font-family: 'Source Code Pro';
+//     font-style: normal;
+//     font-weight: 200;
+//     src: url('../fonts/source-code-pro-v14-latin-200.eot'); /* IE9 Compat Modes */
+//     src: local(''),
+//          url('../fonts/source-code-pro-v14-latin-200.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//          url('../fonts/source-code-pro-v14-latin-200.woff2') format('woff2'), /* Super Modern Browsers */
+//          url('../fonts/source-code-pro-v14-latin-200.woff') format('woff'), /* Modern Browsers */
+//          url('../fonts/source-code-pro-v14-latin-200.ttf') format('truetype'), /* Safari, Android, iOS */
+//          url('../fonts/source-code-pro-v14-latin-200.svg#SourceCodePro') format('svg'); /* Legacy iOS */
+//   }
   /* source-code-pro-300 - latin */
   @font-face {
     font-family: 'Source Code Pro';
@@ -25,31 +25,31 @@
          url('../fonts/source-code-pro-v14-latin-300.svg#SourceCodePro') format('svg'); /* Legacy iOS */
   }
   /* source-code-pro-regular - latin */
-  @font-face {
-    font-family: 'Source Code Pro';
-    font-style: normal;
-    font-weight: 400;
-    src: url('../fonts/source-code-pro-v14-latin-regular.eot'); /* IE9 Compat Modes */
-    src: local(''),
-         url('../fonts/source-code-pro-v14-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/source-code-pro-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/source-code-pro-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/source-code-pro-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/source-code-pro-v14-latin-regular.svg#SourceCodePro') format('svg'); /* Legacy iOS */
-  }
+//   @font-face {
+//     font-family: 'Source Code Pro';
+//     font-style: normal;
+//     font-weight: 400;
+//     src: url('../fonts/source-code-pro-v14-latin-regular.eot'); /* IE9 Compat Modes */
+//     src: local(''),
+//          url('../fonts/source-code-pro-v14-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//          url('../fonts/source-code-pro-v14-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+//          url('../fonts/source-code-pro-v14-latin-regular.woff') format('woff'), /* Modern Browsers */
+//          url('../fonts/source-code-pro-v14-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+//          url('../fonts/source-code-pro-v14-latin-regular.svg#SourceCodePro') format('svg'); /* Legacy iOS */
+//   }
   /* source-code-pro-500 - latin */
-  @font-face {
-    font-family: 'Source Code Pro';
-    font-style: normal;
-    font-weight: 500;
-    src: url('../fonts/source-code-pro-v14-latin-500.eot'); /* IE9 Compat Modes */
-    src: local(''),
-         url('../fonts/source-code-pro-v14-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/source-code-pro-v14-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/source-code-pro-v14-latin-500.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/source-code-pro-v14-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/source-code-pro-v14-latin-500.svg#SourceCodePro') format('svg'); /* Legacy iOS */
-  }
+//   @font-face {
+//     font-family: 'Source Code Pro';
+//     font-style: normal;
+//     font-weight: 500;
+//     src: url('../fonts/source-code-pro-v14-latin-500.eot'); /* IE9 Compat Modes */
+//     src: local(''),
+//          url('../fonts/source-code-pro-v14-latin-500.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//          url('../fonts/source-code-pro-v14-latin-500.woff2') format('woff2'), /* Super Modern Browsers */
+//          url('../fonts/source-code-pro-v14-latin-500.woff') format('woff'), /* Modern Browsers */
+//          url('../fonts/source-code-pro-v14-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
+//          url('../fonts/source-code-pro-v14-latin-500.svg#SourceCodePro') format('svg'); /* Legacy iOS */
+//   }
   /* source-code-pro-600 - latin */
   @font-face {
     font-family: 'Source Code Pro';
@@ -64,28 +64,28 @@
          url('../fonts/source-code-pro-v14-latin-600.svg#SourceCodePro') format('svg'); /* Legacy iOS */
   }
   /* source-code-pro-700 - latin */
-  @font-face {
-    font-family: 'Source Code Pro';
-    font-style: normal;
-    font-weight: 700;
-    src: url('../fonts/source-code-pro-v14-latin-700.eot'); /* IE9 Compat Modes */
-    src: local(''),
-         url('../fonts/source-code-pro-v14-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/source-code-pro-v14-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/source-code-pro-v14-latin-700.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/source-code-pro-v14-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/source-code-pro-v14-latin-700.svg#SourceCodePro') format('svg'); /* Legacy iOS */
-  }
+//   @font-face {
+//     font-family: 'Source Code Pro';
+//     font-style: normal;
+//     font-weight: 700;
+//     src: url('../fonts/source-code-pro-v14-latin-700.eot'); /* IE9 Compat Modes */
+//     src: local(''),
+//          url('../fonts/source-code-pro-v14-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//          url('../fonts/source-code-pro-v14-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+//          url('../fonts/source-code-pro-v14-latin-700.woff') format('woff'), /* Modern Browsers */
+//          url('../fonts/source-code-pro-v14-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+//          url('../fonts/source-code-pro-v14-latin-700.svg#SourceCodePro') format('svg'); /* Legacy iOS */
+//   }
   /* source-code-pro-900 - latin */
-  @font-face {
-    font-family: 'Source Code Pro';
-    font-style: normal;
-    font-weight: 900;
-    src: url('../fonts/source-code-pro-v14-latin-900.eot'); /* IE9 Compat Modes */
-    src: local(''),
-         url('../fonts/source-code-pro-v14-latin-900.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../fonts/source-code-pro-v14-latin-900.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../fonts/source-code-pro-v14-latin-900.woff') format('woff'), /* Modern Browsers */
-         url('../fonts/source-code-pro-v14-latin-900.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../fonts/source-code-pro-v14-latin-900.svg#SourceCodePro') format('svg'); /* Legacy iOS */
-  }
+//   @font-face {
+//     font-family: 'Source Code Pro';
+//     font-style: normal;
+//     font-weight: 900;
+//     src: url('../fonts/source-code-pro-v14-latin-900.eot'); /* IE9 Compat Modes */
+//     src: local(''),
+//          url('../fonts/source-code-pro-v14-latin-900.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+//          url('../fonts/source-code-pro-v14-latin-900.woff2') format('woff2'), /* Super Modern Browsers */
+//          url('../fonts/source-code-pro-v14-latin-900.woff') format('woff'), /* Modern Browsers */
+//          url('../fonts/source-code-pro-v14-latin-900.ttf') format('truetype'), /* Safari, Android, iOS */
+//          url('../fonts/source-code-pro-v14-latin-900.svg#SourceCodePro') format('svg'); /* Legacy iOS */
+//   }
