страница Обомне и слайдер

--- a/src/index.scss
+++ b/src/index.scss
@@ -25,6 +25,8 @@
 @import 'components/Skills/skills.scss';
 @import 'components/Skills/ProgressBar/progressbar.scss';
 
+//slider
+@import 'components/Slider/Slider.scss';
 
 // adaptive
 @import 'components/assets/styles/media/mobile.scss';
