--- a/src/components/assets/styles/fonts.scss
+++ b/src/components/assets/styles/fonts.scss
@@ -23,6 +23,7 @@
          url('../fonts/source-code-pro-v14-latin-300.woff') format('woff'), /* Modern Browsers */
          url('../fonts/source-code-pro-v14-latin-300.ttf') format('truetype'), /* Safari, Android, iOS */
          url('../fonts/source-code-pro-v14-latin-300.svg#SourceCodePro') format('svg'); /* Legacy iOS */
+    font-display: swap;
   }
   /* source-code-pro-regular - latin */
 //   @font-face {
@@ -62,6 +63,7 @@
          url('../fonts/source-code-pro-v14-latin-600.woff') format('woff'), /* Modern Browsers */
          url('../fonts/source-code-pro-v14-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
          url('../fonts/source-code-pro-v14-latin-600.svg#SourceCodePro') format('svg'); /* Legacy iOS */
+    font-display: swap;
   }
   /* source-code-pro-700 - latin */
 //   @font-face {
