--- a/src/index.scss
+++ b/src/index.scss
@@ -27,6 +27,7 @@
 
 //slider
 @import 'components/Slider/Slider.scss';
+@import 'components/Accordion/accordion.scss';
 
 // adaptive
 @import 'components/assets/styles/media/mobile.scss';
@@ -45,6 +46,7 @@
 body {
   display: block;
 }
+
 
 .goback {
   color: #181818;
@@ -138,7 +140,47 @@ body {
 
 
 
+  .accordion {
+    /* Border */
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-bottom-color: transparent;
+    border-radius: 4px;
+}
 
+.accordion__item {
+    border-bottom: 1px solid rgba(0, 0, 0, 0.3);
+}
+
+.accordion__header {
+    /* Center the content horizontally */
+    align-items: center;
+    display: flex;
+
+    cursor: pointer;
+    padding: 16px;
+}
+
+.accordion__toggle {
+    margin-right: 12px;
+}
+
+.accordion__title {
+    /* Take remaining width */
+    flex: 1;
+}
+
+.accordion__content {
+    /* For not selected item */
+    display: none;
+
+    border-top: 1px solid rgba(0, 0, 0, 0.3);
+    padding: 16px;
+}
+
+.accordion__content--selected {
+    /* For selected item */
+    display: block;
+}
 
 
   
